feat: pagination and list products
